--- a/assets/css/Index/mediaQueryIndex.css
+++ b/assets/css/Index/mediaQueryIndex.css
@@ -13,11 +13,27 @@
     
     .search .sort-filter-parts{
         width: 50%;
+        font-size: 14px;
+        border-top: 1px solid var(--lines-color);
+    }
+
+    .search .sort-filter-parts.sort-part{
+        border-left: 0px;
+    }
+
+    .numOfTopics{
+        font-size: 18px;
     }
 
 }
 
 @media (min-width: 576px) and (max-width:767px){
+
+
+    .cards.container {
+        width: calc( 88% + var(--cards-gap));
+        margin-inline: auto;
+    }
 
     .card-container{
         width: 50%;
@@ -32,11 +48,34 @@
     
     .search .sort-filter-parts{
         width: 50%;
+        font-size: 14px;
+        border-top: 1px solid var(--lines-color);
     }
 
+    .search .sort-filter-parts.sort-part{
+        border-left: 0px;
+    }
+
+    .numOfTopics{
+        font-size: 22px;
+    }
+ 
 }
 
 @media (min-width: 768px) and (max-width:992px){
+
+    .cards.container {
+        width: calc( 90% + var(--cards-md-gap));
+        margin-inline: auto;
+    }
+
+    .search .input-part{
+        width: 50%;
+    }
+
+    .search .sort-filter-parts{
+        width: 25%;
+    }
 
     .card-container{
         width: 33.333333%;
@@ -45,6 +84,19 @@
 }
 
 @media (min-width: 993px) and (max-width: 1199px){
+
+    .cards.container {
+        width: calc( 90% + var(--cards-lg-gap));
+        margin-inline: auto;
+    }
+
+    .search .input-part{
+        width: 60%;
+    }
+
+    .search .sort-filter-parts{
+        width: 20%;
+    }
 
     .card-container{
         width: 25%;
