--- a/assets/css/Index/indexStyles.css
+++ b/assets/css/Index/indexStyles.css
@@ -1,15 +1,13 @@
 :root{
-    
-    /* Controls the gap size between cards! */
+    --single-star-size:19px;
+    --stars-offset:1.9px;
+    /* was 1.1 */
 }
 /* Start of main */
 
-/* Temporarly */
 main {
-    min-height: 150vh;
     padding-bottom: 30px;
 }
-
 .search {
     display: flex;
     width: 100%;
@@ -20,9 +18,6 @@ main {
     border-radius: 13px;
     overflow: hidden;
 }
-/* [name="star"]{
-    step=0.8:
-} */
 
 .search > *{
     background-color: var(--bg_default);
@@ -40,6 +35,26 @@ main {
     font-size: 15px;
     font-family: 'Nunito Sans', sans-serif;
 }
+.selector{
+    width: calc( 100% + 4px);
+    margin-left: -4px;
+    color: var(--body-text);
+    background-color: transparent;
+    border: none;
+    font-size: 15px;
+    font-family: 'Nunito Sans', sans-serif;
+    position: relative;
+}
+.selector:focus{
+    border: none;
+    outline: none; 
+}
+.selector option , .selector optgroup {
+    color: var(--body-text);
+    background-color: var(--bg_default);
+    border-bottom: 0px;
+}
+
 .search .input-part{
     width: 70%;
     padding: 12px;
@@ -63,6 +78,7 @@ main {
     padding-inline:16px;
     padding-top: 5px;
     font-size: 15px;
+    letter-spacing: 0.5px;
 }
 
 .search .sort-filter-parts .filter-sort-by{
@@ -91,21 +107,13 @@ main {
     flex-wrap: wrap;
     flex-basis: 100%;
     row-gap: 30px;
+    align-items: stretch; /** added newly */
 }
 
 .cards.container {
     width: calc( 90% + var(--cards-oneside-empty-space));
     margin-inline: calc( 5% - var(--cards-gap) / 2);
 }
-
-/* .cards.container {
-    width: calc( 90% + var(--cards-oneside-empty-space));
-    max-width: calc(1400px + var(--cards-gap));
-    margin-inline: auto;
-}
-.container {
-    max-width: 1400px;
-} */
 
 .card-container{
     width: 20%;
@@ -127,7 +135,8 @@ main {
     margin-inline: 15px;
 }
 .card .titles{
-    margin-bottom: 35px;
+    min-height: 70px;
+    color: var(--body-text);
 }
 .card img{
     background-color: white;
@@ -135,14 +144,21 @@ main {
     object-fit: cover;
 }
 .card .course-desc {
-    font-size: 16px;
+    font-size: 15px;
     text-overflow: ellipsis !important;
     white-space:nowrap;
     overflow: hidden;
     font-weight: 400;
 }
 .card .course-name {
-    font-weight: 700;
+    font-weight: 600;
+    font-size: 17px;
+    display: -webkit-box;
+    text-overflow: ellipsis !important;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .card .author{
@@ -150,9 +166,47 @@ main {
     font-size: 14px;
     color: gray;
 }
-
+.card a:active {
+    color: white;
+}
 .card [name="star"] , .card [name="star-half-outline"], .card [name="star-outline"]{
     font-size: 18px;
+}
+
+.course-rating {
+    -webkit-background-clip:text;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(rgb(229,152,26),rgb(229,152,26));
+    background-clip: text;
+    color: transparent;
+    position: relative;
+    min-height: 22px;
+}
+.course-rating li::before{
+    content: "\2605";
+    display: inline-block;
+    font-size: 26px;
+    width: var(--single-star-size);
+}
+.course-rating [name="star-outline"] {
+    position: absolute;
+    top: 10px;
+    /* --ionicon-stroke-width: 32px; */
+}
+.course-rating [star-num="1"] {
+    left: calc( var(--single-star-size) * 0 + var(--stars-offset));
+}
+.course-rating [star-num="2"] {
+    left: calc( var(--single-star-size) * 1 + var(--stars-offset));
+}
+.course-rating [star-num="3"] {
+    left: calc( var(--single-star-size) * 2 + var(--stars-offset));
+}
+.course-rating [star-num="4"] {
+    left: calc( var(--single-star-size) * 3 + var(--stars-offset));
+}
+.course-rating [star-num="5"] {
+    left: calc( var(--single-star-size) * 4 + var(--stars-offset));
 }
 /* end of Main */
 
