--- a/assets/css/globalCss/mediaQueryGlobal.css
+++ b/assets/css/globalCss/mediaQueryGlobal.css
@@ -26,16 +26,16 @@
         margin-right: 5px;
     }
 
-    .header .header-text{
+    .banner .banner-text{
         width: 90%;
         left: 5%;
         transform: translateX(0%);
         bottom: 15px;
     }
-    .header .header-text h1{
+    .banner .banner-text h1{
         font-size: 20px;
     }
-    .header .header-text p{
+    .banner .banner-text p{
         font-size: 14px;
     }
 
@@ -67,13 +67,13 @@
         transform: rotate(3.5deg);
     }
 
-    .header .header-text {
+    .banner .banner-text {
         width: 90%;
     }
-    .header .header-text h1{
+    .banner .banner-text h1{
         font-size: 22px;
     }
-    .header .header-text p{
+    .banner .banner-text p{
         font-size: 16px;
     }
 
@@ -87,13 +87,13 @@
 
 
 @media (min-width: 768px) and (max-width:992px){
-    .header .header-text {
+    .banner .banner-text {
         width: 90%;
     }
-    .header .header-text h1{
+    .banner .banner-text h1{
         font-size: 22px;
     }
-    .header .header-text p{
+    .banner .banner-text p{
         font-size: 16px;
     }
 }
